kasm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kasm
  namespace: kasm
spec:
  selector:
    app: kasm
  ports:
  - name: https
    port: 443
    targetPort: 443
  - name: wizard
    port: 3000
    targetPort: 3000
  type: ClusterIP
